needs fix: save-button not centered

--- a/src/feedPage/editProfile.css
+++ b/src/feedPage/editProfile.css
@@ -1,8 +1,9 @@
 .edit-profile-container {
-  width: 95%;
-  height: 95%;
+  width: 100%;
+  height: 100%;
   margin-top: 5vh;
   align-items: center;
+  justify-content: center;
   background-color: #FFFFFF;
   border-radius: 15px;
 }
@@ -18,7 +19,7 @@
   height: 20vw;
   border-radius: 50%;
   object-fit: cover;
-  border: 1px solid #CACACA;
+  border: 0px solid #CACACA;
   margin-right: 5vw;
   margin-left: 5vw;
   margin-top: 3vh;
@@ -28,11 +29,11 @@
   margin-top: 3vh;
   width: 47vw;
   height: 3.5vh;
-  background-color: #F0F0F0;
+  background-color: #F1F1F1;
   border: none;
   border-radius: 15px;
   font-size: 13px;
-  color: #606060;
+  color: #8F8F8F;
   cursor: pointer;
 }
 
@@ -41,6 +42,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-left: 5%;
 }
 
 .edit-label {
@@ -51,10 +53,12 @@
 }
 
 .edit-input {
-  width: 70%;
-  padding: 10px;
+  width: 65%;
+  margin-right: 10vw;
   border-radius: 30px;
   font-size: 15px;
+  text-align: center;
+  color: #8F8F8F;
 }
 
 .save-button {
@@ -63,10 +67,10 @@
   font-size: 15px;
   color: #FFFFFF;
   cursor: pointer;
-  width: 76%;
+  width: 75%;
   height: 4.3vh;
   text-align: center;
-  align-self: center;
-  position: fixed;
+  margin-top: 90%;
+  margin-left: 13%;
   bottom: 5vh;
 }
